[package]
name = "sup"
version = "0.1.18"
edition = "2021"
publish = false

[dependencies]
price-proxy = { workspace = true, features = ["no-entrypoint", "with-serde"] }
price-proxy-client = { workspace = true }
super-lendy = { path = "../program", default-features = false, features = ["no-entrypoint"] }
texture-common = { workspace = true }
utils = { path = "../utils" }
# texture-common = { path = "../../common", features = ["metaplex"] }
derive_more = "0.99"
dirs-next = "2"
structopt = "0.3.26"
solana-sdk = "1.18"
solana-client = "1.18"
anyhow = "1.0.52"
chrono = "0.4"
spl-token = { version = "4", features = ["no-entrypoint"] }
spl-token-2022 = { version = "0.6.1", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.1", features = ["no-entrypoint"] }
solana-account-decoder = "1.18.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.0"
base64 = "0.21.2"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
rust_decimal = "1.33.1"
bytemuck = "1.14.0"
hex = "0.4.3"
futures-util = "0.3.30"
async-recursion = "1.1.1"
bincode = "1.3.3"