[package]
name = "super-lendy"
version = "0.1.19"
edition = "2021"
publish = false

[features]
default = ["with-processor"]
no-entrypoint = []
test-bpf = ["dep:chrono"]
with-processor = ["price-proxy"]

[dependencies]
borsh = "1.5"
bytemuck = "1.12"
derive_more = "0.99"
num_enum = "0.7"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
serde_with = "3"
solana-program = "1.18"
spl-associated-token-account = { version = "1.1.1", features = ["no-entrypoint"] }
spl-token = "4"
spl-token-2022 = { version = "3", features = ["no-entrypoint"] }
static_assertions = "1.1"
thiserror = "1"
tinyvec = "1.6"
bitflags = "2.5.0"
chrono = { version = "0.4", optional = true }

texture-common = { workspace = true }
curvy = { workspace = true, features = ["no-entrypoint"] }
curvy-utils = { workspace = true }
price-proxy = { workspace = true, features = ["no-entrypoint"], optional = true }

[dev-dependencies]
assert_matches = "1"
lazy_static = "1"
solana-program-test = "1.18"
solana-sdk = "1.18"
# spl-record = "0.1.0"
tokio = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[lib]
crate-type = ["cdylib", "lib"]
